--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Python virtual environment
-learn
+learn/
 
 # Compiled Python files
 *.pyc
@@ -15,3 +15,5 @@ lib/
 lib64/
 bin/
 include/
+
+__pycache__/
